--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Plataforma de perguntas e respostas",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +13,6 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {}
 }
